// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render delete button when only a single row remains 1`] = `
<div>
  <EuiFormRow
    className="euiColorStop"
    describedByIds={Array []}
    error={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    key="0"
    labelType="label"
  >
    <div>
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem>
          <EuiFieldNumber
            aria-label="Stop"
            compressed={false}
            fullWidth={false}
            isLoading={false}
            onChange={[Function]}
            value={0}
          />
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiColorPicker
            color="#FF0000"
            onChange={[Function]}
          />
        </EuiFlexItem>
      </EuiFlexGroup>
      <div
        className="euiColorStop__icons"
      >
        <EuiButtonIcon
          aria-label="Add"
          color="primary"
          iconSize="m"
          iconType="plusInCircle"
          onClick={[Function]}
          title="Add"
          type="button"
        />
      </div>
    </div>
  </EuiFormRow>
</div>
`;

exports[`renders color stop form rows 1`] = `
<div>
  <EuiFormRow
    className="euiColorStop"
    describedByIds={Array []}
    error={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    key="0"
    labelType="label"
  >
    <div>
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem>
          <EuiFieldNumber
            aria-label="Stop"
            compressed={false}
            fullWidth={false}
            isLoading={false}
            onChange={[Function]}
            value={0}
          />
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiColorPicker
            color="#FF0000"
            onChange={[Function]}
          />
        </EuiFlexItem>
      </EuiFlexGroup>
      <div
        className="euiColorStop__icons"
      >
        <EuiButtonIcon
          aria-label="Delete"
          color="danger"
          iconSize="m"
          iconType="trash"
          onClick={[Function]}
          title="Delete"
          type="button"
        />
        <EuiButtonIcon
          aria-label="Add"
          color="primary"
          iconSize="m"
          iconType="plusInCircle"
          onClick={[Function]}
          title="Add"
          type="button"
        />
      </div>
    </div>
  </EuiFormRow>
  <EuiFormRow
    className="euiColorStop"
    describedByIds={Array []}
    error={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    key="1"
    labelType="label"
  >
    <div>
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem>
          <EuiFieldNumber
            aria-label="Stop"
            compressed={false}
            fullWidth={false}
            isLoading={false}
            onChange={[Function]}
            value={25}
          />
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiColorPicker
            color="#00FF00"
            onChange={[Function]}
          />
        </EuiFlexItem>
      </EuiFlexGroup>
      <div
        className="euiColorStop__icons"
      >
        <EuiButtonIcon
          aria-label="Delete"
          color="danger"
          iconSize="m"
          iconType="trash"
          onClick={[Function]}
          title="Delete"
          type="button"
        />
        <EuiButtonIcon
          aria-label="Add"
          color="primary"
          iconSize="m"
          iconType="plusInCircle"
          onClick={[Function]}
          title="Add"
          type="button"
        />
      </div>
    </div>
  </EuiFormRow>
</div>
`;

exports[`renders error messages when rows contain invalid content 1`] = `
<div>
  <EuiFormRow
    className="euiColorStop"
    describedByIds={Array []}
    error={
      Array [
        "Color must provide a valid hex value",
      ]
    }
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={true}
    key="0"
    labelType="label"
  >
    <div>
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem>
          <EuiFieldNumber
            aria-label="Stop"
            compressed={false}
            fullWidth={false}
            isLoading={false}
            onChange={[Function]}
            value={10}
          />
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiColorPicker
            color=""
            onChange={[Function]}
          />
        </EuiFlexItem>
      </EuiFlexGroup>
      <div
        className="euiColorStop__icons"
      >
        <EuiButtonIcon
          aria-label="Delete"
          color="danger"
          iconSize="m"
          iconType="trash"
          onClick={[Function]}
          title="Delete"
          type="button"
        />
        <EuiButtonIcon
          aria-label="Add"
          color="primary"
          iconSize="m"
          iconType="plusInCircle"
          onClick={[Function]}
          title="Add"
          type="button"
        />
      </div>
    </div>
  </EuiFormRow>
  <EuiFormRow
    className="euiColorStop"
    describedByIds={Array []}
    error={
      Array [
        "Stop must be greater than previous stop value",
      ]
    }
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={true}
    key="1"
    labelType="label"
  >
    <div>
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem>
          <EuiFieldNumber
            aria-label="Stop"
            compressed={false}
            fullWidth={false}
            isLoading={false}
            onChange={[Function]}
            value={0}
          />
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiColorPicker
            color="#00FF00"
            onChange={[Function]}
          />
        </EuiFlexItem>
      </EuiFlexGroup>
      <div
        className="euiColorStop__icons"
      >
        <EuiButtonIcon
          aria-label="Delete"
          color="danger"
          iconSize="m"
          iconType="trash"
          onClick={[Function]}
          title="Delete"
          type="button"
        />
        <EuiButtonIcon
          aria-label="Add"
          color="primary"
          iconSize="m"
          iconType="plusInCircle"
          onClick={[Function]}
          title="Add"
          type="button"
        />
      </div>
    </div>
  </EuiFormRow>
</div>
`;
